Enable more logging

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,7 @@ spring:
     hibernate:
       ddl-auto: none
     open-in-view: false
+
+logging:
+  level:
+    com.vinceruby.urlshortener: DEBUG
