--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     import: optional:file:.env[.properties]
 
   datasource:
-    url: "jdbc:postgresql://localhost:${POSTGRES_PORT}/${POSTGRES_DB}"
-    username: ${POSTGRES_USER}
-    password: ${POSTGRES_PASSWORD}
+    url: "jdbc:postgresql://localhost:${POSTGRES_PORT:5432}/${POSTGRES_DB:url_shortener}"
+    username: ${POSTGRES_USER:postgres}
+    password: ${POSTGRES_PASSWORD:postgres}
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
